# speed_estimator

./: .gitignore  CRITICAL_MATH_FIX_SUMMARY.md  DEVELOPER_GUIDE.md  JETSON_ADAPTATION_GUIDE.md  README.md  REFACTOR_SUMMARY.md  TURNING_FIXES_SUMMARY.md  TURNING_MIGRATION_GUIDE.md  TURNING_TECHNICAL_SUMMARY.md  pyproject.toml  requirements.txt  toso.md
.trae/rules/: project_rules.md
calibration/: rtsp_camera_192_168_1_17_H.npy  vehicles_H.npy
configs/: camera_handling.yaml  speed_model.yaml  speed_model_human.yaml  speed_model_sample.yaml  tracking.yaml  tracking_human.yaml
configs/camera_single/: rtsp_camera_192_168_1_17.yaml
configs/cameras/: cam_01.yaml  cam_02.yaml  gttet.yaml  test_normanniles.yaml  test_vehicles.yaml
configs/cameras_gttet/: gttet.yaml
configs/cameras_human_test/: human_rtsp_01.yaml
configs/cameras_test_single/: normanniles3.yaml
docs/: pipeline_architecture.md
scripts/: calibrate_camera.py  evaluate.py  run_pipeline.py  run_video_test.py
speed_estimation_v5/: CONFIGURATION_GUIDE.md  calibration.py  config.py  detection.py  math.py  pipeline.py  v5_rtsp_config.json
src/speedestimation/detection/: __init__.py  base.py  mock.py  registry.py  yolo_ultralytics.py
src/speedestimation/fusion/: __init__.py  base.py
src/speedestimation/geometry/: __init__.py  calibration.py  homography.py  roi.py
src/speedestimation/io/: __init__.py  camera_handler.py  video.py
src/speedestimation/output/: __init__.py  alerts.py  notifier.py  overlay.py  sinks.py  (+1 more)
tests/: conftest.py  test_alerts_and_camera_config.py  test_homography.py  test_speed_math.py  test_trails.py
v5/: README.md  camera_manager.py  config.yaml  detection.py  main.py  requirements.txt  speed_estimation.py  tracking.py
v5/calibration/: gttet_H.npy
(+23 files in other folders)
