[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedestimation"
version = "0.1.0"
description = "Production-ready multi-camera vehicle speed estimation for edge deployment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
viz = [
  "tqdm>=4.66",
]
yolo = [
  "ultralytics>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

